syntax = "proto3";

package sail.stream;

message TaskStreamTicket {
  uint64 job_id = 1;
  uint64 stage = 2;
  uint64 partition = 3;
  uint64 attempt = 4;
  uint64 channel = 5;
}
